Fixed game nav too high up

--- a/Main/styles/game-nav.css
+++ b/Main/styles/game-nav.css
@@ -24,7 +24,7 @@
     color: #000;
     margin: 10px;
     transition: 0.6s;
-    top: 110vh;
+    top: 120vh;
     background-color: #fff;
     border: 2px solid #fff;
     text-align: center;
