--- a/Main/styles/main.css
+++ b/Main/styles/main.css
@@ -72,7 +72,7 @@ body::-webkit-scrollbar {
 
 .sub-title{
     position: absolute;
-    top: 100%;
+    top: 110vh;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 79.5vw;
